--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,14 +54,14 @@
   text-decoration: none;
 }
 /* Sidebar search input div */
-#sidebar-nav-div-input{
+#sidebar-nav-div-search{
   width: 90%;
   height: 100px;
   margin-bottom: 15px;
   text-align: center;
 }
 /* Sidebar search input */
-#sidebar-nav-input{
+#sidebar-nav-search{
   width: 80%;
   height: auto;
   float: left;
@@ -90,4 +90,43 @@ display: inline-inline-block;
 margin-left: 0px;
 margin-top: 20px;
 text-align: center;
+}
+#cardTowerTitle{
+  border-bottom: 10px grey;
+  font-family: "optima", serif;
+  font-size: 20px;
+  text-decoration: underline;
+  width: 100%;
+  height: 20px;
+}
+#cardTower{
+  border: 1px grey;
+  box-shadow: 0px 0px 5px black;
+  margin-bottom: 100px;
+}
+#cardBladeTitle{
+  border-bottom: 10px grey;
+  font-family: "optima", serif;
+  font-size: 20px;
+  text-decoration: underline;
+  width: 100%;
+  height: 20px;
+}
+#cardBlade{
+  border: 1px grey;
+  box-shadow: 0px 0px 5px black;
+  margin-bottom: 100px;
+}
+#cardFanTitle{
+  border-bottom: 10px grey;
+  font-family: "optima", serif;
+  font-size: 20px;
+  text-decoration: underline;
+  width: 100%;
+  height: 20px;
+}
+#cardFan{
+  border: 1px grey;
+  box-shadow: 0px 0px 5px black;
+  margin-bottom: 100px;
 }
